# claude-confessional

./: LICENSE  README.md  amen.md  breakpoint.md  confess.md  confessional_hook.py  confessional_store.py  dashboard_generator.py  install.sh  pyproject.toml  record.md  reflect.md  reflection_db.py  sermon.md  transcript_reader.py
.planning/: PHILOSOPHY.md  ROADMAP.md
tests/: conftest.py  test_auto_breakpoints.py  test_confessional_store.py  test_dashboard_generator.py  test_db_commands.py  test_deduplication.py  test_empty_responses.py  test_error_logging.py  test_hook.py  test_hook_helpers.py  test_parse_last_turn.py  test_reflections.py  test_smoke.py  test_transcript_reader.py  test_turn_blocks.py
