[project]
name = "claude-confessional"
version = "0.1.0"
description = "A reflection system for Claude Code that records prompts, responses, and tool usage for methodology analysis"
requires-python = ">=3.9"
license = {text = "MIT"}

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["confessional_store", "transcript_reader", "confessional_hook"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
